--- a/plastic/build.xml
+++ b/plastic/build.xml
@@ -1014,7 +1014,7 @@
 
       <batchtest>
         <fileset dir="${tests.dir}">
-          <include name="**/JUnit*"/>
+          <include name="**/*Test*"/>
         </fileset>
       </batchtest>
 
